fix toggle alignment of side menu

--- a/frontend/src/components/SideMenu/SideMenu.module.css
+++ b/frontend/src/components/SideMenu/SideMenu.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: 250px;
+  width: 200px;
   background: var(--chat-background);
   /* border-right: 1px solid var(--border-color, #333); */
   padding: 20px;
@@ -104,4 +104,6 @@
 .dropdownContent {
   padding-top: 5px;
   padding-bottom: 5px;
+  display: flex;
+  flex-direction: column;
 }
